--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 .map{
-	height: 400px;
+	height: 450px;
 	margin-bottom: 40px;
 	margin-left: 10px;
 	margin-right: 10px;
@@ -28,6 +28,25 @@
 .noise-content p {
 	margin-bottom: 1em;
 }
+
+.noise-table > tbody > tr > td {
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 20px;
+}
+
+.table-subtitle > td{
+	padding-top: 10px;
+	text-align: center;
+}
+
+thead {
+	text-align: center;
+	background-color: #37C0FB;
+	color: white;
+}
+tbody:nth-child(odd) { background: #f5f5f5; }
+tbody:nth-child(even) { background: #e5e5e5; }
 
 /* Basic */
 
