--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
 	height: 400px;
 }
 
+.image-container{
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+
 .map{
 	height: 450px;
 	margin-bottom: 40px;
@@ -25,6 +32,19 @@
 	text-align: center;
 }
 
+.map-header{
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+.impact-table{
+	text-align: center;
+}
+
+.impact-subtitle{
+	padding-top: 0px;
+}
+
 .noise-content p {
 	margin-bottom: 1em;
 }
@@ -32,7 +52,8 @@
 .noise-table > tbody > tr > td {
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-top: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .table-subtitle > td{
@@ -40,11 +61,82 @@
 	text-align: center;
 }
 
+.flow-chart img{
+	width: 100%;
+}
+
+.overlay {
+   background:transparent; 
+   position:absolute; 
+   max-width:750px;
+   height:450px; /* your iframe height */
+}
+
+.scrolloff {
+    pointer-events: none;
+    z-index: -10;
+}
+
+.noise-resource{
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.noise-resource p {
+	margin-bottom: 0.8em;
+}
+
+.start-button {
+	margin-top: 10px;
+}
+
+.impact-icon {
+	width: 25%;
+}
+
+#law td {
+	text-align: center;
+	width: 33.3%;
+	background: white
+}
+
+#cars td, th {
+	border: 2px solid white;
+	background-color: azure;
+	padding: 10px;
+	width: 50px;
+	text-align: center;
+	font-size: 15px;
+	vertical-align: top;
+	text-align: center;
+}
+
+.law-list > li {
+	margin-left:20px;
+}
+
 thead {
 	text-align: center;
 	background-color: #37C0FB;
 	color: white;
 }
+
+thead > tr > td > h3 {
+	margin-bottom: 0px;
+}
+
+thead > tr > td > h6 {
+	margin-bottom: 0px;
+}
+
+.form-container {
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+
 tbody:nth-child(odd) { background: #f5f5f5; }
 tbody:nth-child(even) { background: #e5e5e5; }
 
@@ -82,13 +174,13 @@ tbody:nth-child(even) { background: #e5e5e5; }
 		-o-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-		color: #37c0fb;
+		color: #37C0FB;
 		text-decoration: none;
 		border-bottom: dotted 1px;
 	}
 
 		a:hover {
-			color: #37c0fb;
+			color: #37C0FB;
 			border-bottom-color: transparent;
 		}
 
@@ -229,7 +321,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 		input[type="password"]:focus,
 		input[type="email"]:focus,
 		textarea:focus {
-			border-color: #37c0fb;
+			border-color: #37C0FB;
 		}
 
 	input[type="text"],
@@ -337,7 +429,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 		.icon.major {
 			text-align: center;
 			cursor: default;
-			background-color: #37c0fb;
+			background-color: #37C0FB;
 			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
@@ -489,7 +581,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 		-o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		background-color: #37c0fb;
+		background-color: #37C0FB;
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
@@ -589,12 +681,21 @@ tbody:nth-child(even) { background: #e5e5e5; }
 			margin-left: calc(30% + 2em);
 		}
 
+		.box.post .impacts-inner {
+			margin-left: calc(22% + 2em);
+		}
+
 			.box.post .inner > :last-child {
 				margin-bottom: 0;
 			}
 
 		.box.post .image {
 			width: 30%;
+			margin: 0;
+		}
+
+		.box.post .impacts-image {
+			width: 22%;
 			margin: 0;
 		}
 
@@ -637,7 +738,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 			display: block;
 			width: 100%;
 			height: 0.75em;
-			background-color: #37c0fb;
+			background-color: #37C0FB;
 			background-image: url("images/bg01.png");
 		}
 
@@ -685,7 +786,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 						bottom: -0.5em;
 						left: 50%;
 						margin-left: -0.375em;
-						background-color: #37c0fb;
+						background-color: #37C0FB;
 						background-image: url("images/bg01.png");
 					}
 
@@ -747,8 +848,8 @@ tbody:nth-child(even) { background: #e5e5e5; }
 /* Banner */
 
 	#banner {
-		background-image: url("../images/sanfran.jpg");
-		background-position: center center;
+		background-image: url("../images/california_street.jpg");
+		background-position: center 415px;
 		background-size: cover;
 		height: 28em;
 		text-align: center;
@@ -809,7 +910,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 		}
 
 		.wrapper.style3 {
-			background-color: #37c0fb;
+			background-color: #37C0FB;
 			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
@@ -824,7 +925,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 			}
 
 				.wrapper.style3 .button:hover {
-					color: #37c0fb !important;
+					color: #37C0FB !important;
 				}
 
 /* CTA */
@@ -857,7 +958,7 @@ tbody:nth-child(even) { background: #e5e5e5; }
 		}
 
 			#footer a:hover {
-				color: #37c0fb;
+				color: #37C0FB;
 				border-bottom-color: transparent;
 			}
 
